# Neo-Prompt

./: .gitignore  Neo-Prompt.py  README.md  install.ps1  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yaml
pro/: __init__.py  config.py  formatters.py  model_manager.py  neo_client.py  presets.py  ui_components.py
