[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-prompt"
version = "1.0.1"
description = "Веб-интерфейс для LM Studio с цепочками пресетов"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "AITISPEC" }]
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.13.0",
    "requests>=2.33.1",
]

[tool.setuptools.packages.find]
include = ["pro*"]
